--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="bar"></div>
             </div>
             <ul class="nav-links">
-                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#desc">Descripcion</a></li>
                 <li><a href="#fauna">Fauna</a></li>
                 <li><a href="#flora">Flora</a></li>
                 <li><a href="#mapa">Mapa</a></li>
@@ -27,10 +27,76 @@
         </div>
     </header>
 
-    <section style="height: 150vh; background-color: lightgray; padding-top: 5rem;">
-        <h2 style="text-align: center;">Contenido de la página</h2>
-        <p style="text-align: center; margin-top: 1rem;">Haz scroll para ver el efecto de la barra de navegación fija y el menú hamburguesa.</p>
+    <section id="desc" class="descripcion" style="padding: 4rem 2rem; max-width: 1200px; margin: auto; line-height: 1.8;">
+    <h2 style="text-align: center; margin-bottom: 2rem;">Descripción del área</h2>
+    <p>
+        La Reserva Bahía de Samborombón consta de un área terrestre, la <strong>Reserva Natural Integral (RNI)</strong>, 
+        y un área marina, la <strong>Reserva Natural de Objetivo Definido (RNOD)</strong>. 
+        Esta reserva forma parte del conjunto de las áreas naturales protegidas de la Bahía de Samborombón, 
+        que se ubican a lo largo de toda la bahía, desde Punta Piedras hasta el Cabo San Antonio. 
+        La bahía es una zona intermareal extensa, constituida principalmente por bañados, pantanos salobres 
+        y cangrejales, todos ellos de gran importancia como hábitats y refugios para la biodiversidad, 
+        en particular para un amplio número de especies de aves migratorias. 
+        Aparte de estos ambientes, encontramos pastizales y estepas salobres que conforman la tan característica 
+        <em>Pampa Deprimida</em>.
+    </p>
+    <p>
+        La RNI se considera como una “zona intangible” ya que tiene por objetivo principal la protección estricta 
+        de los valores de conservación de esta área protegida, los cuales son susceptibles a los efectos negativos 
+        que pueden ocasionar las actividades antrópicas. Además, esta zona alberga parte de la población del 
+        <strong>Venado de las Pampas</strong>, especie en peligro de extinción.
+    </p>
+    <p>
+        La RNOD rodea el Este de la RNI para brindarle mayor protección. 
+        Sus aguas son de gran relevancia para especies que allí habitan, tales como el 
+        <strong>delfín franciscana</strong> y el <strong>delfín nariz de botella</strong>, 
+        como para especies que las utilizan como sitios de alimentación, como las tortugas marinas. 
+        Asimismo, es un importante lugar para la reproducción de la fauna ictícola, y sus costas típicas 
+        con cangrejales sirven de áreas de alimentación y descanso tanto a aves migratorias como residentes.
+    </p>
     </section>
+
+<!-- SECCIÓN FAUNA -->
+<section id="fauna" class="fauna" style="padding: 4rem 2rem; max-width: 1200px; margin: auto; line-height: 1.8; background-color:#f9f9f9;">
+    <h2 style="text-align: center; margin-bottom: 2rem;">Fauna</h2>
+    <ul>
+        <li><strong>Venado de las Pampas</strong> (<em>Ozotoceros bezoarticus</em>) – especie emblemática y en peligro de extinción.</li>
+        <li><strong>Gaviota de Olrog</strong> (<em>Larus atlanticus</em>) – especie amenazada.</li>
+        <li>Aves migratorias: playero rojizo, becasa de mar, playerito rabadilla blanca, entre otras.</li>
+        <li>Mamíferos marinos: delfín franciscana, delfín nariz de botella.</li>
+        <li>Tortugas marinas que utilizan la bahía como sitio de alimentación.</li>
+    </ul>
+</section>
+
+<!-- SECCIÓN FLORA -->
+<section id="flora" class="flora" style="padding: 4rem 2rem; max-width: 1200px; margin: auto; line-height: 1.8;">
+    <h2 style="text-align: center; margin-bottom: 2rem;">Flora</h2>
+    <ul>
+        <li>Pastizales y estepas salobres de la <em>Pampa Deprimida</em>.</li>
+        <li>Juncales, totorales y espadañales en los humedales.</li>
+        <li>Vegetación halófila (tolerante a la salinidad), como espartillar y duraznillar.</li>
+        <li>Sobre los cordones de conchilla crecen especies como <em>Celtis tala</em>, <em>Cortaderia selloana</em> (cortadera) y <em>Eryngium pandanifolium</em>.</li>
+    </ul>
+</section>
+
+
+<!-- SECCIÓN MAPA -->
+<section id="mapa" class="mapa" style="padding: 4rem 2rem; max-width: 1200px; margin: auto; line-height: 1.8;">
+    <h2 style="text-align: center; margin-bottom: 2rem;">Mapa</h2>
+    <p>
+        La Bahía de Samborombón se encuentra en el litoral de la provincia de Buenos Aires, extendiéndose desde
+        Punta Piedras hasta el Cabo San Antonio. Sus costas conforman una amplia zona intermareal, con humedales,
+        bañados y cangrejales de enorme valor ecológico.
+    </p>
+    <p style="text-align:center; margin-top:1.5rem;">
+        <!-- Si tenés la imagen del mapa la podés poner acá -->
+        <!-- <img src="img/mapa-samborombon.jpg" alt="Mapa de la Bahía de Samborombón" style="max-width:100%; height:auto;"> -->
+        <a href="https://ampargentina.org/areas/bahia-samborombon/" target="_blank" 
+        style="display:inline-block; padding:0.6rem 1.2rem; background:#0077cc; color:#fff; text-decoration:none; border-radius:6px;">
+            Ver mapa en AMP Argentina
+        </a>
+    </p>
+</section>
 
     <script src="app.js"></script>
 </body>
