--- a/index.html
+++ b/index.html
@@ -57,46 +57,65 @@
     </section>
 
 <!-- SECCIÓN FAUNA -->
-<section id="fauna" class="fauna" style="padding: 4rem 2rem; max-width: 1200px; margin: auto; line-height: 1.8; background-color:#f9f9f9;">
-    <h2 style="text-align: center; margin-bottom: 2rem;">Fauna</h2>
+<section id="fauna" class="fauna">
+    <h2>Fauna</h2>
+    <div class="carousel" id="carousel-fauna">
+        <div class="carousel-track">
+            <img src="src/delfines-de-la-plata.jpg" alt="Fauna 1">
+            <img src="src/Gaviota.jpeg" alt="Fauna 2">
+            <img src="src/VenadoDeLasPampas.jpg" alt="Fauna 3">
+        </div>
+        <button class="carousel-btn prev">&#10094;</button>
+        <button class="carousel-btn next">&#10095;</button>
+    </div>
     <ul>
-        <li><strong>Venado de las Pampas</strong> (<em>Ozotoceros bezoarticus</em>) – especie emblemática y en peligro de extinción.</li>
-        <li><strong>Gaviota de Olrog</strong> (<em>Larus atlanticus</em>) – especie amenazada.</li>
-        <li>Aves migratorias: playero rojizo, becasa de mar, playerito rabadilla blanca, entre otras.</li>
-        <li>Mamíferos marinos: delfín franciscana, delfín nariz de botella.</li>
-        <li>Tortugas marinas que utilizan la bahía como sitio de alimentación.</li>
+        <li>Venado de las Pampas</li>
+        <li>Gaviota de Olrog</li>
+        <li>Delfín franciscana y nariz de botella</li>
     </ul>
 </section>
 
 <!-- SECCIÓN FLORA -->
-<section id="flora" class="flora" style="padding: 4rem 2rem; max-width: 1200px; margin: auto; line-height: 1.8;">
-    <h2 style="text-align: center; margin-bottom: 2rem;">Flora</h2>
+<section id="flora" class="flora">
+    <h2>Flora</h2>
+    <div class="carousel" id="carousel-flora">
+        <div class="carousel-track">
+            <img src="img/flora1.jpg" alt="Flora 1">
+            <img src="img/flora2.jpg" alt="Flora 2">
+            <img src="img/flora3.jpg" alt="Flora 3">
+        </div>
+        <button class="carousel-btn prev">&#10094;</button>
+        <button class="carousel-btn next">&#10095;</button>
+    </div>
     <ul>
-        <li>Pastizales y estepas salobres de la <em>Pampa Deprimida</em>.</li>
-        <li>Juncales, totorales y espadañales en los humedales.</li>
-        <li>Vegetación halófila (tolerante a la salinidad), como espartillar y duraznillar.</li>
-        <li>Sobre los cordones de conchilla crecen especies como <em>Celtis tala</em>, <em>Cortaderia selloana</em> (cortadera) y <em>Eryngium pandanifolium</em>.</li>
+        <li>Pastizales y estepas salobres</li>
+        <li>Juncales y totorales</li>
+        <li>Cordones de conchilla con Celtis tala y Cortaderia</li>
     </ul>
 </section>
 
-
 <!-- SECCIÓN MAPA -->
-<section id="mapa" class="mapa" style="padding: 4rem 2rem; max-width: 1200px; margin: auto; line-height: 1.8;">
-    <h2 style="text-align: center; margin-bottom: 2rem;">Mapa</h2>
+<section id="mapa" class="mapa">
+    <h2>Mapa</h2>
     <p>
         La Bahía de Samborombón se encuentra en el litoral de la provincia de Buenos Aires, extendiéndose desde
         Punta Piedras hasta el Cabo San Antonio. Sus costas conforman una amplia zona intermareal, con humedales,
         bañados y cangrejales de enorme valor ecológico.
     </p>
-    <p style="text-align:center; margin-top:1.5rem;">
-        <!-- Si tenés la imagen del mapa la podés poner acá -->
-        <!-- <img src="img/mapa-samborombon.jpg" alt="Mapa de la Bahía de Samborombón" style="max-width:100%; height:auto;"> -->
-        <a href="https://ampargentina.org/areas/bahia-samborombon/" target="_blank" 
-        style="display:inline-block; padding:0.6rem 1.2rem; background:#0077cc; color:#fff; text-decoration:none; border-radius:6px;">
-            Ver mapa en AMP Argentina
-        </a>
+    <div class="carousel" id="carousel-mapa">
+        <div class="carousel-track">
+            <img src="img/mapa1.jpg" alt="Mapa 1">
+            <img src="img/mapa2.jpg" alt="Mapa 2">
+            <img src="img/mapa3.jpg" alt="Mapa 3">
+        </div>
+        <button class="carousel-btn prev">&#10094;</button>
+        <button class="carousel-btn next">&#10095;</button>
+    </div>
+    <p style="text-align:center; margin-top:1rem;">
+        <a href="https://ampargentina.org/areas/bahia-samborombon/" target="_blank" class="btn">Ver mapa en AMP Argentina</a>
     </p>
 </section>
+
 
     <script src="app.js"></script>
 </body>
