--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     <h2>Flora</h2>
     <div class="carousel" id="carousel-flora">
         <div class="carousel-track">
-            <img src="img/flora1.jpg" alt="Flora 1">
-            <img src="img/flora2.jpg" alt="Flora 2">
-            <img src="img/flora3.jpg" alt="Flora 3">
+            <img src="src/Cortadera.jpg" alt="Flora 1">
+            <img src="src/Juncales.jpg" alt="Flora 2">
+            <img src="src/Pastizal.jpg" alt="Flora 3">
         </div>
         <button class="carousel-btn prev">&#10094;</button>
         <button class="carousel-btn next">&#10095;</button>
@@ -104,9 +104,9 @@
     </p>
     <div class="carousel" id="carousel-mapa">
         <div class="carousel-track">
-            <img src="img/mapa1.jpg" alt="Mapa 1">
-            <img src="img/mapa2.jpg" alt="Mapa 2">
-            <img src="img/mapa3.jpg" alt="Mapa 3">
+            <img src="src/Mapa1.jpg" alt="Mapa 1">
+            <img src="src/Mapa2.JPG" alt="Mapa 2">
+            <img src="src/Mapa3.jpg" alt="Mapa 3">
         </div>
         <button class="carousel-btn prev">&#10094;</button>
         <button class="carousel-btn next">&#10095;</button>
