--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <h2>Fauna</h2>
     <div class="carousel" id="carousel-fauna">
         <div class="carousel-track">
-            <img src="src/delfines-de-la-plata.jpg" alt="Fauna 1">
-            <img src="src/Gaviota.jpeg" alt="Fauna 2">
-            <img src="src/VenadoDeLasPampas.jpg" alt="Fauna 3">
+            <img src="/src/delfines-de-la-plata.jpg" alt="Fauna 1">
+            <img src="/src/Gaviota.jpeg" alt="Fauna 2">
+            <img src="/src/VenadoDeLasPampas.jpg" alt="Fauna 3">
         </div>
         <button class="carousel-btn prev">&#10094;</button>
         <button class="carousel-btn next">&#10095;</button>
@@ -80,9 +80,9 @@
     <h2>Flora</h2>
     <div class="carousel" id="carousel-flora">
         <div class="carousel-track">
-            <img src="src/Cortadera.jpg" alt="Flora 1">
-            <img src="src/Juncales.jpg" alt="Flora 2">
-            <img src="src/Pastizal.jpg" alt="Flora 3">
+            <img src="/src/Cortadera.jpg" alt="Flora 1">
+            <img src="/src/Juncales.jpg" alt="Flora 2">
+            <img src="/src/Pastizal.jpg" alt="Flora 3">
         </div>
         <button class="carousel-btn prev">&#10094;</button>
         <button class="carousel-btn next">&#10095;</button>
@@ -104,9 +104,9 @@
     </p>
     <div class="carousel" id="carousel-mapa">
         <div class="carousel-track">
-            <img src="src/Mapa1.jpg" alt="Mapa 1">
-            <img src="src/Mapa2.JPG" alt="Mapa 2">
-            <img src="src/Mapa3.jpg" alt="Mapa 3">
+            <img src="/src/Mapa1.jpg" alt="Mapa 1">
+            <img src="/src/Mapa2.JPG" alt="Mapa 2">
+            <img src="/src/Mapa3.jpg" alt="Mapa 3">
         </div>
         <button class="carousel-btn prev">&#10094;</button>
         <button class="carousel-btn next">&#10095;</button>
@@ -119,4 +119,5 @@
 
     <script src="app.js"></script>
 </body>
+
 </html>
