--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestor de Reparto Panadería 🥖</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifests.json">
 </head>
 <body>
     <header>
@@ -49,4 +49,5 @@
     
     <script src="app.js"></script>
 </body>
+
 </html>
